--- a/about/index.html
+++ b/about/index.html
@@ -7,21 +7,21 @@
 <style>.imgabout{margin:auto;width:100%}p{line-height:1}</style>
 <link rel="stylesheet" href="/_nuxt/Topbar.D9x0uqlb.css">
 <link rel="stylesheet" href="/_nuxt/interval.D2cs51dV.css">
-<link rel="preload" as="fetch" crossorigin="anonymous" href="/about/_payload.json?dce9ee00-78e6-4be4-a023-63412975ba1b">
-<link rel="modulepreload" as="script" crossorigin href="/_nuxt/YN-IMmKK.js">
-<link rel="modulepreload" as="script" crossorigin href="/_nuxt/DeGFZQ8m.js">
-<link rel="modulepreload" as="script" crossorigin href="/_nuxt/zkRNkQx4.js">
-<link rel="modulepreload" as="script" crossorigin href="/_nuxt/BRUelUNF.js">
-<link rel="modulepreload" as="script" crossorigin href="/_nuxt/D5Ywy-Ch.js">
-<link rel="modulepreload" as="script" crossorigin href="/_nuxt/BzhOHUFU.js">
-<link rel="modulepreload" as="script" crossorigin href="/_nuxt/BiaYocmx.js">
-<link rel="prefetch" as="script" crossorigin href="/_nuxt/BjB9Ec00.js">
-<link rel="prefetch" as="script" crossorigin href="/_nuxt/DGVQKAir.js">
-<link rel="prefetch" as="script" crossorigin href="/_nuxt/BRxtC6V7.js">
+<link rel="preload" as="fetch" crossorigin="anonymous" href="/about/_payload.json?d9af2752-04da-4730-9d89-85cffe808ce7">
+<link rel="modulepreload" as="script" crossorigin href="/_nuxt/B6KdHSe4.js">
+<link rel="modulepreload" as="script" crossorigin href="/_nuxt/t7dgk5o5.js">
+<link rel="modulepreload" as="script" crossorigin href="/_nuxt/DYB-Gg7-.js">
+<link rel="modulepreload" as="script" crossorigin href="/_nuxt/H8kK6UTB.js">
+<link rel="modulepreload" as="script" crossorigin href="/_nuxt/BR8dzcxM.js">
+<link rel="modulepreload" as="script" crossorigin href="/_nuxt/B9ZbrEIX.js">
+<link rel="modulepreload" as="script" crossorigin href="/_nuxt/BucVAT1m.js">
+<link rel="prefetch" as="script" crossorigin href="/_nuxt/CZbgexWP.js">
+<link rel="prefetch" as="script" crossorigin href="/_nuxt/Dm2Q_o93.js">
+<link rel="prefetch" as="script" crossorigin href="/_nuxt/CzVbqpao.js">
 <link rel="icon" type="image/x-icon" href="favicon.ico">
-<script type="module" src="/_nuxt/YN-IMmKK.js" crossorigin></script>
-<script id="unhead:payload" type="application/json">{"title":"moono labs"}</script></head><body  class="light"><div id="__nuxt"><!--[--><main><span></span></main><!--]--></div><div id="teleports"></div><script type="application/json" data-nuxt-data="nuxt-app" data-ssr="true" id="__NUXT_DATA__" data-src="/about/_payload.json?dce9ee00-78e6-4be4-a023-63412975ba1b">[{"state":1,"once":3,"_errors":4,"serverRendered":6,"path":7,"prerenderedAt":8},["Reactive",2],{},["Set"],["ShallowReactive",5],{},true,"/about",1736425157427]</script>
-<script>window.__NUXT__={};window.__NUXT__.config={public:{},app:{baseURL:"/",buildId:"dce9ee00-78e6-4be4-a023-63412975ba1b",buildAssetsDir:"/_nuxt/",cdnURL:""}}</script>
+<script type="module" src="/_nuxt/B6KdHSe4.js" crossorigin></script>
+<script id="unhead:payload" type="application/json">{"title":"moono labs"}</script></head><body  class="light"><div id="__nuxt"><!--[--><main><span></span></main><!--]--></div><div id="teleports"></div><script type="application/json" data-nuxt-data="nuxt-app" data-ssr="true" id="__NUXT_DATA__" data-src="/about/_payload.json?d9af2752-04da-4730-9d89-85cffe808ce7">[{"state":1,"once":3,"_errors":4,"serverRendered":6,"path":7,"prerenderedAt":8},["Reactive",2],{},["Set"],["ShallowReactive",5],{},true,"/about",1736427239071]</script>
+<script>window.__NUXT__={};window.__NUXT__.config={public:{},app:{baseURL:"/",buildId:"d9af2752-04da-4730-9d89-85cffe808ce7",buildAssetsDir:"/_nuxt/",cdnURL:""}}</script>
 <script src="https://player.vimeo.com/api/player.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.imagesloaded/4.1.4/imagesloaded.pkgd.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/1.20.4/TweenMax.min.js"></script></body></html>
