--- a/ru/works/fontain/index.html
+++ b/ru/works/fontain/index.html
@@ -7,22 +7,22 @@
 <link rel="stylesheet" href="/_nuxt/Topbar_ru.BGaZyZUy.css">
 <link rel="stylesheet" href="/_nuxt/interval.D2cs51dV.css">
 <link rel="stylesheet" href="/_nuxt/Gallery.4g4am-Jz.css">
-<link rel="preload" as="fetch" crossorigin="anonymous" href="/ru/works/fontain/_payload.json?dce9ee00-78e6-4be4-a023-63412975ba1b">
-<link rel="modulepreload" as="script" crossorigin href="/_nuxt/YN-IMmKK.js">
-<link rel="modulepreload" as="script" crossorigin href="/_nuxt/DDhqEUFB.js">
-<link rel="modulepreload" as="script" crossorigin href="/_nuxt/zkRNkQx4.js">
+<link rel="preload" as="fetch" crossorigin="anonymous" href="/ru/works/fontain/_payload.json?d9af2752-04da-4730-9d89-85cffe808ce7">
+<link rel="modulepreload" as="script" crossorigin href="/_nuxt/B6KdHSe4.js">
+<link rel="modulepreload" as="script" crossorigin href="/_nuxt/CmiBwxgF.js">
+<link rel="modulepreload" as="script" crossorigin href="/_nuxt/DYB-Gg7-.js">
 <link rel="modulepreload" as="script" crossorigin href="/_nuxt/Cdr9tgl2.js">
-<link rel="modulepreload" as="script" crossorigin href="/_nuxt/Dm-_7RlC.js">
-<link rel="modulepreload" as="script" crossorigin href="/_nuxt/D5Ywy-Ch.js">
-<link rel="modulepreload" as="script" crossorigin href="/_nuxt/BzhOHUFU.js">
-<link rel="modulepreload" as="script" crossorigin href="/_nuxt/lMkifrtM.js">
-<link rel="prefetch" as="script" crossorigin href="/_nuxt/BjB9Ec00.js">
-<link rel="prefetch" as="script" crossorigin href="/_nuxt/DGVQKAir.js">
-<link rel="prefetch" as="script" crossorigin href="/_nuxt/BRxtC6V7.js">
+<link rel="modulepreload" as="script" crossorigin href="/_nuxt/CoO7cUo1.js">
+<link rel="modulepreload" as="script" crossorigin href="/_nuxt/BR8dzcxM.js">
+<link rel="modulepreload" as="script" crossorigin href="/_nuxt/B9ZbrEIX.js">
+<link rel="modulepreload" as="script" crossorigin href="/_nuxt/CLBfdD9O.js">
+<link rel="prefetch" as="script" crossorigin href="/_nuxt/CZbgexWP.js">
+<link rel="prefetch" as="script" crossorigin href="/_nuxt/Dm2Q_o93.js">
+<link rel="prefetch" as="script" crossorigin href="/_nuxt/CzVbqpao.js">
 <link rel="icon" type="image/x-icon" href="favicon.ico">
-<script type="module" src="/_nuxt/YN-IMmKK.js" crossorigin></script>
-<script id="unhead:payload" type="application/json">{"title":"moono labs"}</script></head><body  class="light"><div id="__nuxt"><!--[--><main><span></span></main><!--]--></div><div id="teleports"></div><script type="application/json" data-nuxt-data="nuxt-app" data-ssr="true" id="__NUXT_DATA__" data-src="/ru/works/fontain/_payload.json?dce9ee00-78e6-4be4-a023-63412975ba1b">[{"state":1,"once":3,"_errors":4,"serverRendered":6,"path":7,"prerenderedAt":8},["Reactive",2],{},["Set"],["ShallowReactive",5],{},true,"/ru/works/fontain",1736425157433]</script>
-<script>window.__NUXT__={};window.__NUXT__.config={public:{},app:{baseURL:"/",buildId:"dce9ee00-78e6-4be4-a023-63412975ba1b",buildAssetsDir:"/_nuxt/",cdnURL:""}}</script>
+<script type="module" src="/_nuxt/B6KdHSe4.js" crossorigin></script>
+<script id="unhead:payload" type="application/json">{"title":"moono labs"}</script></head><body  class="light"><div id="__nuxt"><!--[--><main><span></span></main><!--]--></div><div id="teleports"></div><script type="application/json" data-nuxt-data="nuxt-app" data-ssr="true" id="__NUXT_DATA__" data-src="/ru/works/fontain/_payload.json?d9af2752-04da-4730-9d89-85cffe808ce7">[{"state":1,"once":3,"_errors":4,"serverRendered":6,"path":7,"prerenderedAt":8},["Reactive",2],{},["Set"],["ShallowReactive",5],{},true,"/ru/works/fontain",1736427239076]</script>
+<script>window.__NUXT__={};window.__NUXT__.config={public:{},app:{baseURL:"/",buildId:"d9af2752-04da-4730-9d89-85cffe808ce7",buildAssetsDir:"/_nuxt/",cdnURL:""}}</script>
 <script src="https://player.vimeo.com/api/player.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.imagesloaded/4.1.4/imagesloaded.pkgd.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/1.20.4/TweenMax.min.js"></script></body></html>
