--- a/about/index.html
+++ b/about/index.html
@@ -5,24 +5,24 @@
 <link href="https://fonts.googleapis.com/css2?family=Alfa+Slab+One&family=Bebas+Neue&family=Alfa+Slab+One&family=Audiowide&family=Bai+Jamjuree:wght@600;700&family=Barlow&family=Big+Shoulders+Display&family=Chivo:ital,wght@0,100..900;1,100..900&family=Climate+Crisis&family=Electrolize&family=Jersey+10&family=Lilita+One&family=Luckiest+Guy&family=Matemasie&family=Michroma&family=Paytone+One&family=Playwrite+AT:ital,wght@0,100..400;1,100..400&family=Rajdhani:wght@300&family=Saira+Semi+Condensed&family=Titillium+Web:wght@300&family=Unbounded:wght@200..900&display=swap" rel="stylesheet">
 <style>.loader-cont{align-items:center;background-color:#bc71ff;display:flex;height:100vh;justify-content:center;position:fixed;width:100vw;z-index:1000000}.loader{align-items:flex-start;aspect-ratio:1;display:flex;width:60px}.loader:after,.loader:before{aspect-ratio:1;content:"";flex:1;--g:conic-gradient(from -90deg at 10px 10px,#fff 90deg,#0000 0);animation:l20 1s infinite;background:var(--g),var(--g),var(--g);filter:drop-shadow(30px 30px 0 #fff)}.loader:after{transform:scaleX(-1)}@keyframes l20{0%{background-position:0 0,10px 10px,20px 20px}33%{background-position:10px 10px}66%{background-position:0 20px,10px 10px,20px 0}to{background-position:0 0,10px 10px,20px 20px}}.loader_bg{align-items:center;animation:noiseAnimation 3s ease-in-out infinite;background:radial-gradient(circle at 10% 20%,hsla(0,100%,70%,.8),transparent 50%),radial-gradient(circle at 80% 30%,rgba(102,102,255,.8),transparent 50%),radial-gradient(circle at 50% 80%,rgba(102,255,102,.8),transparent 50%);background-size:200% 200%;display:flex;height:100%;justify-content:center;opacity:.5;width:100%}@keyframes noiseAnimation{0%{background-position:0 0}50%{background-position:100% 100%}to{background-position:0 0}}</style>
 <style>.imgabout{margin:auto;width:100%}p{line-height:1}</style>
-<link rel="stylesheet" href="/_nuxt/Topbar.CFeU2dAg.css">
+<link rel="stylesheet" href="/_nuxt/Topbar.dpzlUrMC.css">
 <link rel="stylesheet" href="/_nuxt/interval.D2cs51dV.css">
-<link rel="preload" as="fetch" crossorigin="anonymous" href="/about/_payload.json?17050142-ccfa-4afa-b70b-d62015f05fdb">
-<link rel="modulepreload" as="script" crossorigin href="/_nuxt/wJIZBGcg.js">
-<link rel="modulepreload" as="script" crossorigin href="/_nuxt/BUexpUOS.js">
-<link rel="modulepreload" as="script" crossorigin href="/_nuxt/CeeEwzU6.js">
-<link rel="modulepreload" as="script" crossorigin href="/_nuxt/zGdvWABo.js">
-<link rel="modulepreload" as="script" crossorigin href="/_nuxt/Bp2Fv2xW.js">
-<link rel="modulepreload" as="script" crossorigin href="/_nuxt/BGKmTEH3.js">
-<link rel="modulepreload" as="script" crossorigin href="/_nuxt/DpQOrtIr.js">
-<link rel="prefetch" as="script" crossorigin href="/_nuxt/vDLcovAv.js">
-<link rel="prefetch" as="script" crossorigin href="/_nuxt/FMVAWbMy.js">
-<link rel="prefetch" as="script" crossorigin href="/_nuxt/CuzXNXFs.js">
-<link rel="prefetch" as="script" crossorigin href="/_nuxt/CczklUKN.js">
+<link rel="preload" as="fetch" crossorigin="anonymous" href="/about/_payload.json?5fdf1a2e-6864-4f66-86e8-e4eed6478f82">
+<link rel="modulepreload" as="script" crossorigin href="/_nuxt/0ISx3-vu.js">
+<link rel="modulepreload" as="script" crossorigin href="/_nuxt/JhUNICao.js">
+<link rel="modulepreload" as="script" crossorigin href="/_nuxt/CkPlakSD.js">
+<link rel="modulepreload" as="script" crossorigin href="/_nuxt/ClorVcUi.js">
+<link rel="modulepreload" as="script" crossorigin href="/_nuxt/C-TJgkue.js">
+<link rel="modulepreload" as="script" crossorigin href="/_nuxt/D4EtOsac.js">
+<link rel="modulepreload" as="script" crossorigin href="/_nuxt/Be8Pxmsa.js">
+<link rel="prefetch" as="script" crossorigin href="/_nuxt/DRybkUQ5.js">
+<link rel="prefetch" as="script" crossorigin href="/_nuxt/CsPY_NFU.js">
+<link rel="prefetch" as="script" crossorigin href="/_nuxt/BAd-Ja8t.js">
+<link rel="prefetch" as="script" crossorigin href="/_nuxt/DmVcE2uw.js">
 <link rel="icon" type="image/x-icon" href="favicon.ico">
-<script type="module" src="/_nuxt/wJIZBGcg.js" crossorigin></script>
-<script id="unhead:payload" type="application/json">{"title":"moono labs"}</script></head><body  class="light"><div id="__nuxt"><!--[--><main><span></span></main><!--]--></div><div id="teleports"></div><script type="application/json" data-nuxt-data="nuxt-app" data-ssr="true" id="__NUXT_DATA__" data-src="/about/_payload.json?17050142-ccfa-4afa-b70b-d62015f05fdb">[{"state":1,"once":3,"_errors":4,"serverRendered":6,"path":7,"prerenderedAt":8},["Reactive",2],{},["Set"],["ShallowReactive",5],{},true,"/about",1736476193212]</script>
-<script>window.__NUXT__={};window.__NUXT__.config={public:{},app:{baseURL:"/",buildId:"17050142-ccfa-4afa-b70b-d62015f05fdb",buildAssetsDir:"/_nuxt/",cdnURL:""}}</script>
+<script type="module" src="/_nuxt/0ISx3-vu.js" crossorigin></script>
+<script id="unhead:payload" type="application/json">{"title":"moono labs"}</script></head><body  class="light"><div id="__nuxt"><!--[--><main><span></span></main><!--]--></div><div id="teleports"></div><script type="application/json" data-nuxt-data="nuxt-app" data-ssr="true" id="__NUXT_DATA__" data-src="/about/_payload.json?5fdf1a2e-6864-4f66-86e8-e4eed6478f82">[{"state":1,"once":3,"_errors":4,"serverRendered":6,"path":7,"prerenderedAt":8},["Reactive",2],{},["Set"],["ShallowReactive",5],{},true,"/about",1736477321397]</script>
+<script>window.__NUXT__={};window.__NUXT__.config={public:{},app:{baseURL:"/",buildId:"5fdf1a2e-6864-4f66-86e8-e4eed6478f82",buildAssetsDir:"/_nuxt/",cdnURL:""}}</script>
 <script src="https://player.vimeo.com/api/player.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.imagesloaded/4.1.4/imagesloaded.pkgd.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/1.20.4/TweenMax.min.js"></script></body></html>
