--- a/works/moth/index.html
+++ b/works/moth/index.html
@@ -5,26 +5,26 @@
 <link href="https://fonts.googleapis.com/css2?family=Alfa+Slab+One&family=Bebas+Neue&family=Alfa+Slab+One&family=Audiowide&family=Bai+Jamjuree:wght@600;700&family=Barlow&family=Big+Shoulders+Display&family=Chivo:ital,wght@0,100..900;1,100..900&family=Climate+Crisis&family=Electrolize&family=Jersey+10&family=Lilita+One&family=Luckiest+Guy&family=Matemasie&family=Michroma&family=Paytone+One&family=Playwrite+AT:ital,wght@0,100..400;1,100..400&family=Rajdhani:wght@300&family=Saira+Semi+Condensed&family=Titillium+Web:wght@300&family=Unbounded:wght@200..900&display=swap" rel="stylesheet">
 <style>.loader-cont{align-items:center;background-color:#fff;display:flex;height:100vh;justify-content:center;position:fixed;width:100vw;z-index:1000000}.loader{align-items:flex-start;aspect-ratio:1;display:flex;width:60px}.loader:after,.loader:before{aspect-ratio:1;content:"";flex:1;--g:conic-gradient(from -90deg at 10px 10px,#fff 90deg,#0000 0);animation:l20 1s infinite;background:var(--g),var(--g),var(--g);filter:drop-shadow(30px 30px 0 white)}.loader:after{transform:scaleX(-1)}@keyframes l20{0%{background-position:0 0,10px 10px,20px 20px}33%{background-position:10px 10px}66%{background-position:0 20px,10px 10px,20px 0}to{background-position:0 0,10px 10px,20px 20px}}.loader_bg{align-items:center;animation:noiseAnimation 3s ease-in-out infinite;background:#0b0b0b;background-size:200% 200%;display:flex;height:100%;justify-content:center;width:100%}@keyframes noiseAnimation{0%{background-position:0 0}50%{background-position:100% 100%}to{background-position:0 0}}</style>
 <link rel="stylesheet" href="/_nuxt/Topbar.BmYKnMzO.css">
-<link rel="stylesheet" href="/_nuxt/interval.DOT1e7FZ.css">
+<link rel="stylesheet" href="/_nuxt/interval.D2cs51dV.css">
 <link rel="stylesheet" href="/_nuxt/Contact.CQKS7Qcw.css">
-<link rel="preload" as="fetch" crossorigin="anonymous" href="/works/moth/_payload.json?43bc1e9e-3ae9-46ed-8463-e0f029e9e4a4">
-<link rel="modulepreload" as="script" crossorigin href="/_nuxt/avOB1jp_.js">
-<link rel="modulepreload" as="script" crossorigin href="/_nuxt/BAnH_Md5.js">
-<link rel="modulepreload" as="script" crossorigin href="/_nuxt/B-5oSUZr.js">
+<link rel="preload" as="fetch" crossorigin="anonymous" href="/works/moth/_payload.json?04fd0b41-4ed3-469a-8bfa-542928ae6c77">
+<link rel="modulepreload" as="script" crossorigin href="/_nuxt/KXV3wpGW.js">
+<link rel="modulepreload" as="script" crossorigin href="/_nuxt/ie3rSTU4.js">
+<link rel="modulepreload" as="script" crossorigin href="/_nuxt/DlUVOSMl.js">
 <link rel="modulepreload" as="script" crossorigin href="/_nuxt/Cdr9tgl2.js">
-<link rel="modulepreload" as="script" crossorigin href="/_nuxt/1-aEUkA_.js">
-<link rel="modulepreload" as="script" crossorigin href="/_nuxt/YsJZcbJn.js">
-<link rel="modulepreload" as="script" crossorigin href="/_nuxt/VbH_wHfd.js">
-<link rel="modulepreload" as="script" crossorigin href="/_nuxt/DewJgFrv.js">
-<link rel="modulepreload" as="script" crossorigin href="/_nuxt/Zfvz-fur.js">
-<link rel="prefetch" as="script" crossorigin href="/_nuxt/D84mgwE2.js">
-<link rel="prefetch" as="script" crossorigin href="/_nuxt/B6Ik9JSg.js">
-<link rel="prefetch" as="script" crossorigin href="/_nuxt/BgA94xFR.js">
-<link rel="prefetch" as="script" crossorigin href="/_nuxt/z4aM3ET7.js">
+<link rel="modulepreload" as="script" crossorigin href="/_nuxt/vAYXV2Sp.js">
+<link rel="modulepreload" as="script" crossorigin href="/_nuxt/CzpWWddn.js">
+<link rel="modulepreload" as="script" crossorigin href="/_nuxt/Cpi-LYGd.js">
+<link rel="modulepreload" as="script" crossorigin href="/_nuxt/CK2Z7TrM.js">
+<link rel="modulepreload" as="script" crossorigin href="/_nuxt/DTtVt2GG.js">
+<link rel="prefetch" as="script" crossorigin href="/_nuxt/BsUb8aML.js">
+<link rel="prefetch" as="script" crossorigin href="/_nuxt/DIphiDg_.js">
+<link rel="prefetch" as="script" crossorigin href="/_nuxt/BI6_qySb.js">
+<link rel="prefetch" as="script" crossorigin href="/_nuxt/CMv758Eg.js">
 <link rel="icon" type="image/x-icon" href="favicon.ico">
-<script type="module" src="/_nuxt/avOB1jp_.js" crossorigin></script>
-<script id="unhead:payload" type="application/json">{"title":"moono labs"}</script></head><body  class="light"><div id="__nuxt"><!--[--><main><div class="loader-cont" id="loader-cont"><div class="loader_bg"><div class="loader"></div></div></div><span></span></main><!--]--></div><div id="teleports"></div><script type="application/json" data-nuxt-data="nuxt-app" data-ssr="true" id="__NUXT_DATA__" data-src="/works/moth/_payload.json?43bc1e9e-3ae9-46ed-8463-e0f029e9e4a4">[{"state":1,"once":3,"_errors":4,"serverRendered":6,"path":7,"prerenderedAt":8},["Reactive",2],{},["Set"],["ShallowReactive",5],{},true,"/works/moth",1736510347217]</script>
-<script>window.__NUXT__={};window.__NUXT__.config={public:{},app:{baseURL:"/",buildId:"43bc1e9e-3ae9-46ed-8463-e0f029e9e4a4",buildAssetsDir:"/_nuxt/",cdnURL:""}}</script>
+<script type="module" src="/_nuxt/KXV3wpGW.js" crossorigin></script>
+<script id="unhead:payload" type="application/json">{"title":"moono labs"}</script></head><body  class="light"><div id="__nuxt"><!--[--><main><div class="loader-cont" id="loader-cont"><div class="loader_bg"><div class="loader"></div></div></div><span></span></main><!--]--></div><div id="teleports"></div><script type="application/json" data-nuxt-data="nuxt-app" data-ssr="true" id="__NUXT_DATA__" data-src="/works/moth/_payload.json?04fd0b41-4ed3-469a-8bfa-542928ae6c77">[{"state":1,"once":3,"_errors":4,"serverRendered":6,"path":7,"prerenderedAt":8},["Reactive",2],{},["Set"],["ShallowReactive",5],{},true,"/works/moth",1736511276754]</script>
+<script>window.__NUXT__={};window.__NUXT__.config={public:{},app:{baseURL:"/",buildId:"04fd0b41-4ed3-469a-8bfa-542928ae6c77",buildAssetsDir:"/_nuxt/",cdnURL:""}}</script>
 <script src="https://player.vimeo.com/api/player.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.imagesloaded/4.1.4/imagesloaded.pkgd.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/1.20.4/TweenMax.min.js"></script></body></html>
