--- a/ru/contact/index.html
+++ b/ru/contact/index.html
@@ -7,21 +7,21 @@
 <link rel="stylesheet" href="/_nuxt/contact.DCP6bPYJ.css">
 <link rel="stylesheet" href="/_nuxt/interval.D2cs51dV.css">
 <link rel="stylesheet" href="/_nuxt/Topbar_ru.CNC3Yor4.css">
-<link rel="preload" as="fetch" crossorigin="anonymous" href="/ru/contact/_payload.json?b9df5989-89df-4303-9f74-968077933efc">
-<link rel="modulepreload" as="script" crossorigin href="/_nuxt/COe2Ql28.js">
-<link rel="modulepreload" as="script" crossorigin href="/_nuxt/CgOnRtZO.js">
-<link rel="modulepreload" as="script" crossorigin href="/_nuxt/DQREShkx.js">
-<link rel="modulepreload" as="script" crossorigin href="/_nuxt/BEGj5Lo3.js">
-<link rel="modulepreload" as="script" crossorigin href="/_nuxt/DcN_gpaY.js">
-<link rel="modulepreload" as="script" crossorigin href="/_nuxt/NriufL4A.js">
-<link rel="prefetch" as="script" crossorigin href="/_nuxt/BnM0PrUm.js">
-<link rel="prefetch" as="script" crossorigin href="/_nuxt/5BwTIfq-.js">
-<link rel="prefetch" as="script" crossorigin href="/_nuxt/C1IDQjXs.js">
-<link rel="prefetch" as="script" crossorigin href="/_nuxt/CyF-wlMt.js">
+<link rel="preload" as="fetch" crossorigin="anonymous" href="/ru/contact/_payload.json?68038d97-cbbd-4420-bfec-aee0bfaa080f">
+<link rel="modulepreload" as="script" crossorigin href="/_nuxt/P8RHA0DM.js">
+<link rel="modulepreload" as="script" crossorigin href="/_nuxt/dnSwpOD_.js">
+<link rel="modulepreload" as="script" crossorigin href="/_nuxt/DuxHPXNU.js">
+<link rel="modulepreload" as="script" crossorigin href="/_nuxt/ymojYuKX.js">
+<link rel="modulepreload" as="script" crossorigin href="/_nuxt/CuFgDUTR.js">
+<link rel="modulepreload" as="script" crossorigin href="/_nuxt/CmFLXSnc.js">
+<link rel="prefetch" as="script" crossorigin href="/_nuxt/DyZ_2SGZ.js">
+<link rel="prefetch" as="script" crossorigin href="/_nuxt/CZF9NR8h.js">
+<link rel="prefetch" as="script" crossorigin href="/_nuxt/CwOeNI9p.js">
+<link rel="prefetch" as="script" crossorigin href="/_nuxt/Cy89UZRg.js">
 <link rel="icon" type="image/x-icon" href="favicon.ico">
-<script type="module" src="/_nuxt/COe2Ql28.js" crossorigin></script>
-<script id="unhead:payload" type="application/json">{"title":"moono labs"}</script></head><body  class="light"><div id="__nuxt"><!--[--><main><span></span></main><!--]--></div><div id="teleports"></div><script type="application/json" data-nuxt-data="nuxt-app" data-ssr="true" id="__NUXT_DATA__" data-src="/ru/contact/_payload.json?b9df5989-89df-4303-9f74-968077933efc">[{"state":1,"once":3,"_errors":4,"serverRendered":6,"path":7,"prerenderedAt":8},["Reactive",2],{},["Set"],["ShallowReactive",5],{},true,"/ru/contact",1736511636394]</script>
-<script>window.__NUXT__={};window.__NUXT__.config={public:{},app:{baseURL:"/",buildId:"b9df5989-89df-4303-9f74-968077933efc",buildAssetsDir:"/_nuxt/",cdnURL:""}}</script>
+<script type="module" src="/_nuxt/P8RHA0DM.js" crossorigin></script>
+<script id="unhead:payload" type="application/json">{"title":"moono labs"}</script></head><body  class="light"><div id="__nuxt"><!--[--><main><span></span></main><!--]--></div><div id="teleports"></div><script type="application/json" data-nuxt-data="nuxt-app" data-ssr="true" id="__NUXT_DATA__" data-src="/ru/contact/_payload.json?68038d97-cbbd-4420-bfec-aee0bfaa080f">[{"state":1,"once":3,"_errors":4,"serverRendered":6,"path":7,"prerenderedAt":8},["Reactive",2],{},["Set"],["ShallowReactive",5],{},true,"/ru/contact",1736563389930]</script>
+<script>window.__NUXT__={};window.__NUXT__.config={public:{},app:{baseURL:"/",buildId:"68038d97-cbbd-4420-bfec-aee0bfaa080f",buildAssetsDir:"/_nuxt/",cdnURL:""}}</script>
 <script src="https://player.vimeo.com/api/player.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.imagesloaded/4.1.4/imagesloaded.pkgd.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/1.20.4/TweenMax.min.js"></script></body></html>
